hide cases by default, show with js, this prevents a flicker when loading

--- a/app/assets/stylesheets/controllers/addresses.css.scss
+++ b/app/assets/stylesheets/controllers/addresses.css.scss
@@ -129,6 +129,8 @@
 
     .case{
 
+      display: none;
+
       h2{
         font-family: "Lato";
         font-size: 150%;
